style: fix lists missing margin and padding

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_post.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_post.css
@@ -146,3 +146,12 @@ figure.wp-block-table > figcaption.wp-element-caption {
 .hybridsupply.grid .first > .wp-block-column {
     padding: 1rem;
 }
+
+/**
+ * Lists
+ */
+ol,
+ul {
+    margin: revert;
+    padding: revert;
+}
